[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"


[lib]
name = "aoc_2022"
path = "src/lib.rs"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["default", "derive"] }
color-eyre = "0.6.2"
